--- a/app/src/main/res/menu/menu_anagrams.xml
+++ b/app/src/main/res/menu/menu_anagrams.xml
@@ -1,6 +1,30 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".AnagramsActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_menu"
+        app:showAsAction="ifRoom"
+        >
+        <menu>
+            <item
+                android:id="@+id/increase"
+                android:title="Increase word length"
+                android:orderInCategory="1"
+                app:showAsAction="never" />
+            <item
+                android:id="@+id/decrease"
+                android:title="Decrease word length"
+                android:orderInCategory="2"
+                app:showAsAction="never" />
+
+
+        </menu>
+
+
+    </item>
+
+
 </menu>
